[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/ClickableDoor/ClickableDoor.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/bebas_neue/BebasNeue-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/ClickableDoor/mouseovershader.tres" type="Material" id=3]

[sub_resource type="DynamicFont" id=1]
size = 200
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.437989, 2.54339, 3.54585 )

[sub_resource type="QuadMesh" id=3]
size = Vector2( 7.378, 5.36 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0.360784, 1, 0, 0.0823529 )
emission_enabled = true
emission = Color( 0.00392157, 0.376471, 0, 1 )
emission_energy = 3.0
emission_operator = 0
emission_on_uv2 = false

[node name="ClickableDoor" type="Area"]
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 700, 500 )
transparent_bg = true
msaa = 1
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="CanvasLayer" type="CanvasLayer" parent="Viewport"]

[node name="Control" type="Control" parent="Viewport/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 3.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.396141, 0, 0 )
shape = SubResource( 2 )

[node name="NumberDisplay" type="MeshInstance" parent="."]
transform = Transform( -4.37118e-08, 1.93778e-10, 1, -0.00443312, 0.99999, -3.87556e-10, -0.99999, -0.00443312, -4.37105e-08, 0.552734, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="MouseOverDisplay" type="MeshInstance" parent="."]
transform = Transform( -4.37118e-08, 1.93778e-10, 1, -0.00443312, 0.99999, -3.87556e-10, -0.99999, -0.00443312, -4.37105e-08, 0.391082, 0, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="SelectionDisplay" type="MeshInstance" parent="."]
transform = Transform( -4.37118e-08, 1.93778e-10, 1, -0.00443312, 0.99999, -3.87556e-10, -0.99999, -0.00443312, -4.37105e-08, 0.392995, 0, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 6 )

[connection signal="input_event" from="." to="." method="_on_ClickableDoor_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_ClickableDoor_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ClickableDoor_mouse_exited"]
